--- a/app/views/public/pages/_filtres_couleur.html.erb
+++ b/app/views/public/pages/_filtres_couleur.html.erb
@@ -1,7 +1,7 @@
 <div id="filtres-couleur">
 
-    <div class="dropdown">
-        <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="couleurDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+    <div class="dropdown" style="position: relative; z-index: 9999;">
+        <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="couleurDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-palette"></i>
             <span class="ms-1 d-none d-md-inline">
             <%= if params[:couleur].present?
@@ -12,7 +12,7 @@
             </span>
         </button>
 
-        <ul class="dropdown-menu" aria-labelledby="couleurDropdown">
+        <ul class="dropdown-menu" aria-labelledby="couleurDropdown" style="position: absolute; z-index: 9999;">
             <li>
             <%= button_to "Toutes",
                 update_filters_path(
