--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -26,7 +26,7 @@
           </p>
         </div>
         
-        <div class="discover-icons" data-discover-item>
+        <div class="discover-icons">
           <div class="icon-item">
             <i class="bi bi-gem"></i>
             <span>Excellence</span>
