--- a/app/views/public/pages/nos_autres_activites.html.erb
+++ b/app/views/public/pages/nos_autres_activites.html.erb
@@ -216,10 +216,10 @@
           Notre équipe est à votre disposition pour vous conseiller.
         </p>
         <div class="d-flex gap-3 justify-content-center flex-wrap">
-          <%= link_to contact_path, class: "btn btn-brand btn-lg px-5" do %>
+          <%= link_to contact_path, class: "btn btn-lg px-4 shadow btn-smoke-hover" do %>
             <i class="bi bi-envelope me-2"></i>Demander un devis
           <% end %>
-          <%= link_to "tel:+33000000000", class: "btn btn-outline-light btn-lg px-5" do %>
+          <%= link_to "tel:+33 4 93 45 17 17", class: "btn btn-outline-light btn-lg px-5" do %>
             <i class="bi bi-telephone me-2"></i>Nous appeler
           <% end %>
         </div>
