--- a/app/views/public/pages/_filtres_prix.html.erb
+++ b/app/views/public/pages/_filtres_prix.html.erb
@@ -1,7 +1,7 @@
 <div id="filtres-prix">
 
-    <div class="dropdown">
-        <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="prixDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+    <div class="dropdown" style="position: relative; z-index: 9999;">
+        <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="prixDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-currency-euro"></i>
             <span class="ms-1 d-none d-md-inline">
             <%= if params[:prixmax].present?
@@ -12,7 +12,7 @@
             </span>
         </button>
 
-        <ul class="dropdown-menu" aria-labelledby="prixDropdown">
+        <ul class="dropdown-menu" aria-labelledby="prixDropdown" style="position: absolute; z-index: 9999;">
             <li>
             <%= button_to "Tous",
                 update_filters_path(
