--- a/app/views/public/pages/_filtres_type.html.erb
+++ b/app/views/public/pages/_filtres_type.html.erb
@@ -1,14 +1,14 @@
 <div id="filtres-type">
 
-    <div class="dropdown">
-        <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="typeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+    <div class="dropdown" style="position: relative; z-index: 9999;">
+        <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="typeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-tags"></i>
             <span class="ms-1 d-none d-md-inline">
             <%= params[:type].present? ? params[:type].capitalize : "Type" %>
             </span>
         </button>
 
-        <ul class="dropdown-menu" aria-labelledby="typeDropdown">
+        <ul class="dropdown-menu" aria-labelledby="typeDropdown" style="position: absolute; z-index: 9999;">
             <li>
             <%= button_to "Tous",
                 update_filters_path(
