--- a/app/views/public/pages/rdv.html.erb
+++ b/app/views/public/pages/rdv.html.erb
@@ -1,3 +1,5 @@
+<%= page_header("Prendre rendez-vous", "Réservez votre créneau en boutique") %>
+
 <div class="d-flex justify-content-center text-center my-4 m-2 overflow-auto" style="max-width: 100%; white-space: nowrap;">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIe2wvRCY1ElZmtZeMw6r81SrpesVKqSLDDD9gFWgOWUs_hQ/viewform?embedded=true" width="640" height="2400" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
 </div>
