--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,14 +1,14 @@
 
-<nav class="navbar navbar-expand-lg shadow-sm sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top">
   <div class="container">
     <%= link_to image_tag('/images/a1soir_logo_white.png', class: 'navbar-brand', width: "180", alt: "Logo"), root_url %>
 
     <div class="d-flex align-items-center gap-3 order-lg-2">
       <% if ENV["ONLINE_SALES_AVAILABLE"] == "true" %>
-        <%= link_to cart_url, class: "text-decoration-none text-dark position-relative" do %>
+        <%= link_to cart_url, class: "text-decoration-none brand-colored position-relative ms-4 d-none d-lg-block" do %>
           <i class="bi bi-bag fs-4"></i>
           <% if @cart.size > 0 %>
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark small">
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-brand-colored small">
               <%= @cart.size %>
               <span class="visually-hidden">articles dans le panier</span>
             </span>
