--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -26,6 +26,7 @@
         <%= nav_link_public(home_path, "Accueil") %>
         <%= nav_link_public(la_boutique_url, "La boutique de Cannes") %>
         <%= nav_link_public(nos_collections_url, "Nos collections") %>
+        <%= nav_link_public(cabine_essayage_url, "Cabine d'essayage") %>
         <%= nav_link_public(le_concept_url, "Le concept") %>
         <%= nav_link_public(nos_autres_activites_url, "Nos autres activités") %>
         <%= nav_link_public(legal_url, "Légal") %>
