--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -68,6 +68,9 @@
     <%= render "public/shared/navbar" %>
 
     <div class="m-0 p-0 public-content">
+      <div id="flash">
+        <%= render partial: "public/pages/flash" %>
+      </div>
       <%= yield %>
     </div>
     
