--- a/app/views/public/pages/filtres/_filtres_prix.html.erb
+++ b/app/views/public/pages/filtres/_filtres_prix.html.erb
@@ -21,7 +21,8 @@
                     taille: params[:taille],
                     couleur: params[:couleur],
                     prixmax: nil,
-                    type: params[:type]
+                    type: params[:type],
+                    from_cabine: params[:from_cabine]
                 ),
                 class: "dropdown-item #{'fw-bold' if params[:prixmax].blank?}" %>
             </li>
@@ -36,7 +37,8 @@
                     taille: params[:taille],
                     couleur: params[:couleur],
                     prixmax: prix,
-                    type: params[:type]
+                    type: params[:type],
+                    from_cabine: params[:from_cabine]
                     ),
                     class: "dropdown-item #{'fw-bold' if params[:prixmax].to_s == prix.to_s}" %>
             </li>
