--- a/app/views/public/pages/filtres/_filtres_taille.html.erb
+++ b/app/views/public/pages/filtres/_filtres_taille.html.erb
@@ -21,7 +21,8 @@
                     taille: nil,
                     couleur: params[:couleur],
                     prixmax: params[:prixmax],
-                    type: params[:type]
+                    type: params[:type],
+                    from_cabine: params[:from_cabine]
                 ),
                 class: "dropdown-item #{'fw-bold' if params[:taille].blank?}" %>
             </li>
@@ -35,7 +36,8 @@
                     taille: taille.id,
                     couleur: params[:couleur],
                     prixmax: params[:prixmax],
-                    type: params[:type]
+                    type: params[:type],
+                    from_cabine: params[:from_cabine]
                     ),
                     class: "dropdown-item #{'fw-bold' if params[:taille].to_s == taille.id.to_s}" %>
             </li>
