--- a/app/views/public/pages/produits.html.erb
+++ b/app/views/public/pages/produits.html.erb
@@ -36,4 +36,10 @@
         <%= render  "produits_filtres" %>
    
     </div>
+
+    <!-- Bouton flottant pour accéder au formulaire -->
+    <% if @cabine_cart.any? %>
+        <%= render partial: "public/pages/floating_reservation_button" %>
+    <% end %>
+    
 </div>
