--- a/app/views/public/pages/_produit.html.erb
+++ b/app/views/public/pages/_produit.html.erb
@@ -78,7 +78,7 @@
                                   </button>
                               <% else %>
                                   <%= button_to cabine_add_product_path(produit), 
-                                      class: "btn btn-sm w-100 btn-smoke-hover",
+                                      class: "btn btn-sm w-100 btn-smoke-hover text-light",
                                       style: "background: linear-gradient(135deg, rgba(208, 77, 123, 0.8), rgba(233, 107, 168, 0.8)); border: none;" do %>
                                       <i class="bi bi-bag-plus me-2"></i>Ajouter à la cabine
                                   <% end %>
